# object-detection-histogram

./: Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
app/: main.py
app/service/: object_detection.py
app/static/css/: styles.css  styles.scss  tailwind-built.css
app/templates/: base.html  histogram.html  index.html
